# ChangeLog for media-plugins/live
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.126 2010/01/06 16:55:17 ranger Exp $

  23 Feb 2011; Nathan Phillip Brink (binki) <ohnobinki@ohnopublishing.net>
  +live-2011.01.24.ebuild:
  Bump patched ebuild to live-2011.01.24.

  27 Sep 2010; <binki@gentoo.org> live-2010.04.09.ebuild:
  Add support for gentoo-prefix to my portage-mutilib hack to
  live-2010.04.09.

  20 Aug 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> +live-2010.04.09.ebuild:
  Bumped to live-2010.04.09, attempting to follow changes for the
  corresponding bump in portage. Need for bump reported by geos_one.

  16 Mar 2010; Nathan Phillip Brink (ohnobinki)
  <ohnobinki@ohnopublishing.net> -live-2008.09.02.ebuild,
  live-2009.06.02.ebuild, +files/live-2009.06.02-as-needed.patch,
  +files/live-2009.06.02-buildorder.patch,
  +files/live-2009.06.02-libdeps.patch, live-2009.09.28.ebuild,
  +files/live-2009.09.28-buildorder.patch, live-2009.11.12.ebuild,
  files/config.gentoo, -files/config.gentoo-so, -files/config.gentoo-so-r1,
  files/live-recursive.patch:
  Fix up ebuilds to build libraries using libtool instead of by calling ld
  directly. Also upgraded to EAPI="2", shorten DESCRIPTION, and added some
  missing die''s. All for bug 309681, bug 308373, and to properly support
  portage-multilib.

  06 Jan 2010; Brent Baude <ranger@gentoo.org> live-2009.06.02.ebuild:
  Marking live-2009.06.02 ppc64 for bug 277009

*live-2009.11.12 (21 Nov 2009)

  21 Nov 2009; Alexis Ballier <aballier@gentoo.org> +live-2009.11.12.ebuild:
  version bump

  21 Nov 2009; Alexis Ballier <aballier@gentoo.org> -live-2009.07.28.ebuild,
  -live-2009.09.04.ebuild:
  remove old

*live-2009.09.28 (29 Sep 2009)

  29 Sep 2009; Alexis Ballier <aballier@gentoo.org> +live-2009.09.28.ebuild,
  +files/config.gentoo-so-r1, +files/live-recursive.patch: