@@ -8,31 +8,25 @@ AUX live-2009.06.02-libdeps.patch 2803 RMD160 37d3e1479e742e73d9694678f0c2628ece
 AUX live-2009.09.28-buildorder.patch 1060 RMD160 cd6a6c2e699eaae0c5b5a40959c988ed3e74745a SHA1 5fdeea464948f31dcb4a6948394f74b67e502428 SHA256 f280a8cade00530cdd009cf1f999df6ff0d5f6c53cae78e12e84a8dc6461b2aa
 AUX live-recursive.patch 433 RMD160 f70734114f7423f48693f71c5b0f0ae85c337090 SHA1 87526904f6e69696f6fbf41a2313f1a43c51871a SHA256 6347a54046cf02671666bf74a3dbb54ebb898adafe9670abecebe86e6d870288
 DIST live.2009.06.02.tar.gz 469471 RMD160 ddbe057ac4f47d66ee7c99ec3c4886fe97f06565 SHA1 a03ac47dc1b2a5e4745e30fc304af61675036782 SHA256 66c54241bfcc7ea42fe40e1c93739be79a3c065390c4163c0f2647ac45c24758
-DIST live.2009.09.28.tar.gz 449508 RMD160 c25cb1a2377f0fe6c3817bbc3edbcd4daa57d0dc SHA1 e5657206976f592e3fd1fda9cfe77b5712498784 SHA256 0e84700e8982ac5472723c0327131c179512d4b99fe0c4ae903cfe08a1a0e03c
-DIST live.2009.11.12.tar.gz 449650 RMD160 ef21d2b72aaf2044c9e96cadfe62cc1304d89843 SHA1 14830984d85ef710835d5e9c26ebb626b66c0260 SHA256 f6ee9c1079b5ab8e330c9edd7634bcffd76eb434cf52fe2ea06c4072bf823645
-DIST live.2010.04.09.tar.gz 452846 RMD160 3ee1d0c767e139e3d7cc66fd6409404e625dee73 SHA1 3c480355b153847273b30f0ce30cf80dff12e170 SHA256 e9539f59058cb885f28ac48cdce285f8a0fe567c4aa889c2ac3bd0638b007944
 DIST live.2011.01.24.tar.gz 480478 RMD160 2c029b276fc382f0e483fe769a021b2b280e8ed6 SHA1 94545798f1b700d6e30c4b132d7bcff4d5d14db8 SHA256 7c98cf1db4ba1015645f6e4f5f51442b0d54eb76a8f477737aded58a5dc2bd42
 EBUILD live-2009.06.02.ebuild 2547 RMD160 0f43b19c53d4c6be7f4643a961ba32a83a7ede5d SHA1 88e01d0a3498a6439249270deb4d642ab8cb4737 SHA256 8cbd9d36063f2acfe7728bcc2ad4dd8112b4fd9993caf60e03547fea0ab88bc3
-EBUILD live-2009.09.28.ebuild 2534 RMD160 94e6c28e16926040e2295d4cfe51dd5a4bcba4bd SHA1 cb13c5ccdf07cac07f8bafb4a91d033e136bee6e SHA256 bebe47d33036bf28d89fd3a5c365eb76aa8885e738a7af02320c8bca98cf2f8c
-EBUILD live-2009.11.12.ebuild 2513 RMD160 c1293171f7798ab32aa03a7fe63ed45540af8d5c SHA1 5c47796e9e96223f0079aec84df38237394c6b9d SHA256 ffcb29f699392b4a1d5ce0d82c5615d346dd8cfece0e0171391e23881ef1b933
-EBUILD live-2010.04.09.ebuild 3800 RMD160 db49422df67fae1712316f84711da896c3dc7513 SHA1 2f6f9e21a306c65c14af8843c2b516a3aa61da08 SHA256 62e124ca439c1be7b6fadd132dbb78c921e0e00d4f50844da261c86af3582026
 EBUILD live-2011.01.24.ebuild 3695 RMD160 ff5732ead05d88a7c67d5e55dfa99d0073ad207a SHA1 0c6e3899ebcf406f63b1496879528aba78fd6e83 SHA256 32341b8db1cab06624064b69b65e6b73ac22feb6280ea41e37558b1c200cd4cf
-MISC ChangeLog 16948 RMD160 dc5127d8dac3a5c9cc652c770610aca4977e73ff SHA1 51b827caab1d722f7d1b95408e112c0a6b0d1d20 SHA256 ba1248582ab0b43984279b3c9ef2ff0030e30dc87021960a2cedb3c939952357
+MISC ChangeLog 17220 RMD160 f8667dc3e39a3cfda83bd662461aea1eac2185e7 SHA1 ff9e7cc70204c839189e639f3d42b6e0d63d5892 SHA256 d9e399a24691be1d20da84f4a17d0ddc9967c4d18d9beba33e5a515708ba7b9f
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJNZIDcAAoJEHQ6UuhrqBBQ1JUQALEidLIaIpkAbWCtuUSejhE1
-cViV/47Z4/P86xVcBR+En+o471dBQE04nFeWswkgZTaq/Qax7H91tZNaYxtIYp2O
-J5HZA5IKYZIoNtsxWbMYTV0SrDKVOB0bHN8CldnviR1M5wHXMbWDWkFxq92mmqIl
-nS5XXUyhyAzmZqzwXSZfHNllG7aA2TEDNSqWjPxcxahFPtIQTPNOy9tBBoZ3AUC5
-94pyWn1BmnNmFcRqDcOq6gaio5RHqnNlDiXmN2nDh4ZXlI/bw+LOxkEzVD51KrkP
-UjnEQtkx3odQ6hqCz3jyRxQE0AeMLvD1UoBaLYbPi3kRX7FLQ/FPiSX638306SIk
-8UcqhXGVwP60xl5+iYaPX+dMCvM3EE6kgtwSTbfdCVDZSd8JX/Brq9QrQTJwaGR/
-kIwYTs1dZIOvX0SYqpX1u4ATmITmi8jMFPSODY3WsUBhVuR1z2vr2r25jZUiNEIX
-KKmQ5AffjB7bzuHJeTIFwiGiBnvtJ5Jhk0ETxlTi/BODfDq/Px4tWESdxxh8ZBp5
-uynEqfSDWnNueLGggezxDei5etHG4pWHaaTRXf5pSG0+2TDxCrwdTGYhGIomXrbW
-fNH4bqFKIQlma3C/tlhJPWgPnwqFsk6BQJq6US+FWrICy5LzYq+cqxIawxnlOabv
-93sdkGBwX523al+9ZFQb
-=auFG
+iQIcBAEBCAAGBQJNZIGrAAoJEHQ6UuhrqBBQ8vsQAJaUNQoKunZeJaYoNIPk6IF7
+UXNnT9gtDc90NS9x9X/18a10HdqxTRE4c5ZxVZZbBEdSy5QvYQIMZb26UD74RnHo
+I1eAPDi9Nqv8H2FSrA339vHDbUTmWQDnBo/+7yMPTg41IdGC9zSara3R1M9O+/fu
+eWyxf3ewLSHNnjaQaPW5P9PMECHsmLlZlSNnEVV9hJYhQEMxsDejY9shEKDHXGGg
+2IXP9DkyFjaZ650AntWyrP5pI0xAlT/3lXHtdxCXsQdVlTYHQA2wtXd3ZzCzp/It
+2yCoev7XU4dbeKNqqBDFlvriBi7hkR2h5ucjkdEx9BABGPjwW8OA6y6nZBl1P40W
+NCb2RJ/nJFbJFWBd22AzTC/LFV5924Rb5Hg8Q6CjAfhXaMbBFybqsLgQtooG0IMq
+D1UdMwCsVeSDlv6gHWhQCXbjahzwvo3JQ8qIIBIMx5UxEdlQgYjycTBPjnPUQ70X
+gstZ7ZhoSDljz0V7WpH6mP9m36LtRQAiFSFMrKeRYsD3hwiRRfGSM7lxaObHZxW2
+1gzDHeeUcssr3Nb3B2uiTnTDeKmdtP8v8/3EQ0Fb+BapFfwJ7KOtpVZfpblyzndY
+kWyO0gOoJ09Fsc2eHHmxD5KfbYnkyElirFDaEQNXF/CigjBDdC8VATRJTX0QAPXb
+xBMsfW08S2uBVwJqnpfQ
+=xY+s
 -----END PGP SIGNATURE-----
